Fix duplicate IDs and missing element in LIFF demo

--- a/line-liff-poc.html
+++ b/line-liff-poc.html
@@ -13,8 +13,7 @@
   <p id="displayName"></p>
   <p id="statusMessage"></p>
   <p id="getDecodedIDToken"></p>
-  <p id="userId"></p>
-  <p id="userId"></p>
+  <p id="sub"></p>
   <script src="https://static.line-scdn.net/liff/edge/versions/2.9.0/sdk.js"></script>
   <script>
     function runApp() {
