--- a/line-liff-poc.html
+++ b/line-liff-poc.html
@@ -8,6 +8,9 @@
   </style>
 </head>
 <body>
+<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+ <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
+</nav>
   <img id="pictureUrl" width="25%">
   <p id="userId"></p>
   <p id="displayName"></p>
