--- a/line-lift-poc-2.html
+++ b/line-lift-poc-2.html
@@ -6,6 +6,9 @@
     <script src="https://static.line-scdn.net/liff/edge/2.15.1/sdk.js"></script>
 </head>
 <body>
+<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+ <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
+</nav>
     <h1>LIFF App</h1>
     <button id="getUserId">Get User ID</button>
     <script>
