--- a/line-lift-poc-2.html
+++ b/line-lift-poc-2.html
@@ -6,6 +6,7 @@
     <script src="https://static.line-scdn.net/liff/edge/2.15.1/sdk.js"></script>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4"><div class="container-fluid"><a class="navbar-brand" href="index.html">Home</a><button class="btn btn-outline-light" onclick="history.back()">Back</button></div></nav>
     <h1>LIFF App</h1>
     <button id="getUserId">Get User ID</button>
     <script>
