--- a/line-liff-poc.html
+++ b/line-liff-poc.html
@@ -2,12 +2,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   <title>My LIFF v2</title>
   <style>
     #pictureUrl { display: block; margin: 0 auto }
   </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4"><div class="container-fluid"><a class="navbar-brand" href="index.html">Home</a><button class="btn btn-outline-light" onclick="history.back()">Back</button></div></nav>
   <img id="pictureUrl" width="25%">
   <p id="userId"></p>
   <p id="displayName"></p>
