Add global nav style and include across tools

--- a/line-liff-poc.html
+++ b/line-liff-poc.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+    <link rel="stylesheet" href="global.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My LIFF v2</title>
   <style>
@@ -8,7 +9,7 @@
   </style>
 </head>
 <body>
-<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+<nav class="simple-nav">
  <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
 </nav>
   <img id="pictureUrl" width="25%">
