--- a/line-lift-poc-2.html
+++ b/line-lift-poc-2.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="global.css">
     <title>LIFF App</title>
     <script src="https://static.line-scdn.net/liff/edge/2.15.1/sdk.js"></script>
 </head>
 <body>
-<nav style="margin-bottom:20px;background:#f0f0f0;padding:10px;border-radius:4px;">
+<nav class="simple-nav">
  <a href="index.html">Home</a> | <a href="javascript:history.back()">Back</a>
 </nav>
     <h1>LIFF App</h1>
