--- a/legacy/line-liff-poc.html
+++ b/legacy/line-liff-poc.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="../assets/css/global.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My LIFF v2</title>
+    <link rel="icon" type="image/svg+xml" href="../assets/images/favicon.svg">
   <style>
     #pictureUrl { display: block; margin: 0 auto }
   </style>
