--- a/legacy/line-lift-poc-2.html
+++ b/legacy/line-lift-poc-2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../assets/css/global.css">
     <title>LIFF App</title>
+    <link rel="icon" type="image/svg+xml" href="../assets/images/favicon.svg">
     <script src="https://static.line-scdn.net/liff/edge/2.15.1/sdk.js"></script>
 </head>
 <body>
